ECOPROJECT-4121 | feat: expose complexity by OS & Disk
This is the third part of the complexity feature: showing VM complexity scores by both Disk size and OS support
